--- a/index.html
+++ b/index.html
@@ -2,4 +2,13 @@
 <link rel="stylesheet" href="./style.css">
 <script src="./script.js" type="module"></script>
 <canvas></canvas>
+<form>
+	<fieldset>
+		<legend>options</legend>
+		<label>
+			<input type=checkbox name=geometry />
+			show geometry
+		</label>
+	</fieldset>
+</form>
 <script>document.body.style.setProperty('--svh', `${window.innerHeight}px`)</script>
